--- a/gray.html
+++ b/gray.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
-		<title>Random CSS Effects</title>
+		<link rel="stylesheet" href="gray.css">
+		<title>Random CSS Effects - Gray</title>
 	</head>
 	<body>
 		<button class="sg">Simple Gradient</button>
