Added frame button, corrected other buttons

--- a/black.html
+++ b/black.html
@@ -7,5 +7,7 @@
 	</head>
 	<body>
 		<button class="rf1">Reflect 1</button>
+		<div class="space"></div>
+		<button class="fr1">Frame 1</button>
 	</body>
 </html>
